fix: mobile menu aligning

--- a/docs/assets/styles/global/page-navigation.scss
+++ b/docs/assets/styles/global/page-navigation.scss
@@ -79,6 +79,7 @@
 .page-navigation__list .current-page {
   display: flex;
   align-items: center;
+  justify-content: center;
   min-height: 78px;
   text-decoration: none;
   font-family: "Open Sans Bold", "Arial", sans-serif;
